[package]
name = "ptnet-core"
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/katex-header.html" ]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
