[package]
name = "ptnet-elementary"
description = "Implementation of ptnet-core for Elementary nets (EN)."
version = "0.1.2"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/ptnet_elementary/"
repository = "https://github.com/johnstonskj/rust-ptnets"
license-file = "../LICENSE"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "doc/katex-header.html" ]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[dependencies]
ptnet-core = { version = "0.1", path = "../ptnet-core" }
rand = "0.8.5"
